@@ -36,11 +36,11 @@ context_test_SOURCES = context_test.c globus_test_tap.h
 xio_driver_cntl_test_SOURCES = xio_driver_cntl_test.c globus_test_tap.h
 xio_driver_cntl_test_LDADD = \
     -dlpreopen ../xio_driver/libglobus_xio_net_manager_driver.la \
-    -dlpreopen libglobus_net_manager_null.la
+    -dlpreopen libglobus_net_manager_null.la $(LIBLTDL)
 xio_driver_test_SOURCES = xio_driver_test.c globus_test_tap.h
 xio_driver_test_LDADD = \
     -dlpreopen ../xio_driver/libglobus_xio_net_manager_driver.la \
-    -dlpreopen libglobus_net_manager_null.la
+    -dlpreopen libglobus_net_manager_null.la $(LIBLTDL)
 
 if ENABLE_PYTHON
 check_PROGRAMS += python_test
