@@ -1,6 +1,6 @@
 Name: globus-gram-client
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_net_manager-0.3.tar.gz
+Source: http://www.globus.org/ftppub/gt6/packages/globus_net_manager-0.4.tar.gz
 
 Upstream-Authors: The Globus Alliance - http://www.globus.org/
 
