@@ -1,13 +1,13 @@
 Name:		globus-net-manager
 %global _name %(tr - _ <<< %{name})
-Version:	0.3
+Version:	0.4
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Net Manager Library
 
 Group:		System Environment/Libraries
 License:	ASL 2.0
 URL:		http://www.globus.org/
-Source:	http://www.globus.org/ftppub/gt6/packages/globus_net_manager-0.3.tar.gz
+Source:	http://www.globus.org/ftppub/gt6/packages/globus_net_manager-0.4.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 
 Requires:	globus-common%{?_isa} >= 15.27
@@ -151,6 +151,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Wed Jan 07 2015 Globus Toolkit <support@globus.org> - 0.4-1
+- Link in ltdl for tests
+
 * Mon Jan 05 2015 Globus Toolkit <support@globus.org> - 0.3-1
 - Tests run with static build
 
