@@ -1,3 +1,9 @@
+globus-net-manager (0.4-1+gt6.@distro@) @distro@; urgency=low
+
+  * Link in ltdl for tests
+
+ -- Globus Toolkit <support@globus.org>  Wed, 07 Jan 2015 16:12:09 -0500
+
 globus-net-manager (0.3-1+gt6.@distro@) @distro@; urgency=low
 
   * Tests run with static build
